tests/baselines/reference/parserOptionalTypeMembers1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserOptionalTypeMembers1.ts(2,5): error TS2300: Duplicate identifier 'configurable'.
tests/cases/conformance/parser/ecmascript5/parserOptionalTypeMembers1.ts(3,5): error TS2300: Duplicate identifier 'enumerable'.
tests/cases/conformance/parser/ecmascript5/parserOptionalTypeMembers1.ts(4,5): error TS2300: Duplicate identifier 'value'.
tests/cases/conformance/parser/ecmascript5/parserOptionalTypeMembers1.ts(5,5): error TS2300: Duplicate identifier 'writable'.


==== tests/cases/conformance/parser/ecmascript5/parserOptionalTypeMembers1.ts (4 errors) ====
    interface PropertyDescriptor {
        configurable?: boolean;
        ~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'configurable'.
        enumerable?: boolean;
        ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'enumerable'.
        value?: any;
        ~~~~~
!!! error TS2300: Duplicate identifier 'value'.
        writable?: boolean;
        ~~~~~~~~
!!! error TS2300: Duplicate identifier 'writable'.
        get?(): any;
        set?(v: any): void;
    }